tests/fixtures/LatestTests/BinaryOperationLiteralTests/errors/integer_overflow_negative.fg
/; EXPECT_ERROR: NumberTooLargeForInt
print(-9223372036854775809)

